@@ -2,6 +2,7 @@ package com.springboot.MyTodoList.config;
 
 import java.util.Collections;
 import java.util.List;
+
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.context.annotation.Configuration;
@@ -17,23 +18,23 @@ import org.springframework.web.filter.CorsFilter;
 
 @Configuration
 public class CorsConfig {
-    Logger logger = LoggerFactory.getLogger(CorsConfig.class);
+  Logger logger = LoggerFactory.getLogger(CorsConfig.class);
 
-    public CorsFilter corsFilter() {
-        CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(
-                List.of(
-                        "http://localhost:3000",
-                        "https://objectstorage.us-phoenix-1.oraclecloud.com",
-                        "https://petstore.swagger.io",
-                        "http://localhost:5173"));
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "OPTIONS", "DELETE", "PATCH"));
-        config.setAllowedOrigins(Collections.singletonList("*"));
-        config.addAllowedHeader("*");
-        config.addExposedHeader("location");
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config);
-        CorsFilter filter = new CorsFilter(source);
-        return filter;
-    }
+  public CorsFilter corsFilter() {
+    CorsConfiguration config = new CorsConfiguration();
+    config.setAllowedOrigins(
+        List.of(
+            "http://localhost:3000",
+            "https://objectstorage.us-phoenix-1.oraclecloud.com",
+            "https://petstore.swagger.io",
+            "http://localhost:5173"));
+    config.setAllowedMethods(List.of("GET", "POST", "PUT", "OPTIONS", "DELETE", "PATCH"));
+    config.setAllowedOrigins(Collections.singletonList("*"));
+    config.addAllowedHeader("*");
+    config.addExposedHeader("location");
+    UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+    source.registerCorsConfiguration("/**", config);
+    CorsFilter filter = new CorsFilter(source);
+    return filter;
+  }
 }
